# AlphaCarcassonne

./: .clang-format  .gitignore  CODEX_NOTES.md  NOTES.md  commands.md  tests.md
docs/: games.md
docs/api_reference/: registered_names.md
eval_results/carcassonne_az_20260509_222612/: summary.txt
eval_results/carcassonne_checkpoint_curve_20260509_231117/: details.txt  summary.tsv
open_spiel/: CMakeLists.txt
open_spiel/algorithms/: CMakeLists.txt
open_spiel/algorithms/alpha_zero_torch/: alpha_zero.cc  alpha_zero.h  device_manager.h  model.cc  vpevaluator.cc  vpevaluator.h  vpnet.cc  vpnet.h
open_spiel/bots/: CMakeLists.txt
open_spiel/examples/: CMakeLists.txt  alpha_zero_torch_dataset_pretrain.cc  alpha_zero_torch_example.cc  alpha_zero_torch_game_example.cc  alpha_zero_torch_infer_once.cc  alpha_zero_torch_policy_overfit.cc  carcassonne_observation_dump.cc
open_spiel/games/: CMakeLists.txt
open_spiel/games/carcassonne/: BoardModule.cpp  DeckModule.cpp  FeatureModule.cpp  FixedVector.hpp  MeepleModule.cpp  MonasteryModule.cpp  carcassonne.cc  carcassonne.h  carcassonne_test.cc  game.cpp  game.hpp  tile.hpp
open_spiel/games/carcassonne/game/: DeckModule.cpp  DisjointSet.hpp  Feature.cpp  FeatureModule.cpp  FrontierModule.cpp  MonasteryModule.cpp  game.cpp  game.hpp
open_spiel/games/hex/: hex.cc  hex.h
open_spiel/integration_tests/: playthrough_test.py
open_spiel/integration_tests/playthroughs/: carcassonne.txt
open_spiel/python/: CMakeLists.txt
open_spiel/python/games/: __init__.py
open_spiel/python/mfg/games/: __init__.py
open_spiel/python/pybind11/: bots.cc  observer.cc  pyspiel.cc
open_spiel/python/tests/: pyspiel_test.py
open_spiel/scripts/: build_and_run_tests.sh  eval_carcassonne_az.sh  eval_carcassonne_checkpoint_curve.sh  global_variables.sh  install.sh  prune_checkpoints_keep_tens.sh  test_wheel.sh
open_spiel/tests/: CMakeLists.txt  spiel_test.cc
play/: _carcassonne_cpp.cpp  carcassonne_bot_cli.cpp  cpp_engine.py  main.py  models.py  requirements.txt  setup.py  ui_flet.py
play/domain/: __init__.py  models.py
play/engine/: __init__.py  adapter.py
play/tests/: test_cpp_engine_adapter.py
play/ui/: __init__.py  app.py
